--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PROYECTO INTRODUCCION A JS</title>
+    <link rel="stylesheet" href="./public/bootstrap-5.3.5-dist/css/bootstrap.min.css">
 </head>
 <body>
     <h1>HOLA MUNDO</h1>
+
+
+    <script src="./public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
